Final Upload v2 - aggiunte alcune considerazioni finali

--- a/train.ipynb
+++ b/train.ipynb
@@ -614,7 +614,8 @@
   {
    "source": [
     "Di tutta la matrice, la colonna di particolare interesse è quella relativa alla label di classificazione \"Winner\" (Come già preannunciato).\n",
-    "Come si può notare dal grafico, le feature basate su differenze di statistiche dei pokémon associati a ciascun campione hanno mediamente una discreta influenza sull'esito della battaglia.\n",
+    "Come si può notare dal grafico, le feature basate su differenze di statistiche dei pokémon associati a ciascun campione hanno mediamente una discreta influenza sull'esito della battaglia, quindi si può confermare che l'idea di aggiungerle alla modellazione sia plausibile.\n",
+    "\n",
     "Da notare come la \"Speed_diff\" abbia correlazione particolarmente elevata con la label, suggerendo una notevole importanza della statistica al fine della determinazione dell'esito dello scontro, mentre \"Def_diff\" abbia molta poca rilevanza.\n",
     "\n",
     "Scelgo come soglia di coefficiente di correlazione 0.1, considerando poco significative tutte le feature avente valore assoluto del suddetto coefficiente inferiore alla soglia.\n",
@@ -1151,11 +1152,11 @@
   },
   {
    "source": [
-    "Come si può osservare dalla tabella sopra riportata, la scelta di escludere anche le feature relative ad HP e Sp. Def sembra essersi rivelata corretta, poiché la differenza tra le metriche dei due modelli è dell'ordine di pochi centesimi percentuali. Il contributo delle quattro feature rimosse è considerabile irrisorio al fine della classificazione.\n",
+    "Come si può osservare dalla tabella sopra riportata, la scelta di escludere anche le feature relative ad HP e Sp. Def sembra essersi rivelata corretta al fine di risolvere il problema della determinazione di un sottoinsieme ottimale, poiché la differenza tra le metriche dei due modelli è dell'ordine di pochi centesimi percentuali. Si evince quindi che  contributo delle quattro feature rimosse è considerabile irrisorio al fine della classificazione tramite decision tree (non aggiungono informazioni rilevanti) e si può scegliere come classificatore il \"Decision Tree(11_features)\".\n",
     "\n",
-    "Eliminare altre feature causerebbe perdite di prestazioni.\n",
+    "Aumentare ulteriormente la soglia di correlazione minima non produce risultati migliori. Potrebbe essere interessante analizzare esplicitamente le varie feature e cercare di scoprire qualche pattern non determinabile attraverso il semplice studio dei coefficienti di correlazione.\n",
     "\n",
-    "Normalizzare i valori tramite l2-norm ha portato un miglioramento di circa 0.3% di accuracy rispetto ai modelli allenati senza normalizzazione."
+    "Normalizzare i valori tramite l2-norm ha portato un miglioramento di circa 0.3% di accuracy rispetto ai modelli allenati senza normalizzazione, affermando tale processo come necessario al fine di ottenere prestazioni migliori.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
