Final update v3 - bug fixing

--- a/train.ipynb
+++ b/train.ipynb
@@ -1152,7 +1152,7 @@
   },
   {
    "source": [
-    "Come si può osservare dalla tabella sopra riportata, la scelta di escludere anche le feature relative ad HP e Sp. Def sembra essersi rivelata corretta al fine di risolvere il problema della determinazione di un sottoinsieme ottimale, poiché la differenza tra le metriche dei due modelli è dell'ordine di pochi centesimi percentuali. Si evince quindi che  contributo delle quattro feature rimosse è considerabile irrisorio al fine della classificazione tramite decision tree (non aggiungono informazioni rilevanti) e si può scegliere come classificatore il \"Decision Tree(11_features)\".\n",
+    "Come si può osservare dalla tabella sopra riportata, la scelta di escludere anche le feature relative ad HP e Sp. Def sembra essersi rivelata corretta al fine di risolvere il problema della determinazione di un sottoinsieme ottimale di feature, poiché la differenza tra le metriche dei due modelli è dell'ordine di pochi centesimi percentuali. Si evince quindi che il contributo delle quattro feature rimosse è considerabile irrisorio al fine della classificazione tramite decision tree (non aggiungono informazioni rilevanti) e si può scegliere come classificatore il **\"Decision Tree(11_features)\"**.\n",
     "\n",
     "Aumentare ulteriormente la soglia di correlazione minima non produce risultati migliori. Potrebbe essere interessante analizzare esplicitamente le varie feature e cercare di scoprire qualche pattern non determinabile attraverso il semplice studio dei coefficienti di correlazione.\n",
     "\n",
